--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,24 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
 
     <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_above="@+id/btn_speak"
+        android:layout_margin="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                app:cardUseCompatPadding="true"
                 app:cardCornerRadius="3dp"
-                app:cardElevation="3dp">
+                app:cardElevation="3dp"
+                app:cardUseCompatPadding="true">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -33,27 +39,27 @@
                         android:layout_height="wrap_content"
                         android:text="Result"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="24sp"></TextView>
+                        android:textSize="24sp"/>
                     <!-- scanned text will be appear here-->
 
-                    <EditText
+                    <TextView
                         android:id="@+id/resultEt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint=""
                         android:autoLink="all"
                         android:padding="5dp"
-                        android:textColor="#000"
-                        ></EditText>
+                        android:textColor="#000"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
-                app:cardUseCompatPadding="true"
                 app:cardCornerRadius="3dp"
-                app:cardElevation="3dp">
+                app:cardElevation="3dp"
+                app:cardUseCompatPadding="true">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -65,19 +71,28 @@
                         android:layout_height="wrap_content"
                         android:text="Image Preview"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="24sp"></TextView>
+                        android:textSize="24sp"/>
                     <!-- taken image will display here-->
                     <ImageView
                         android:id="@+id/imageIv"
+                        android:layout_gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:maxHeight="250dp"
-                        ></ImageView>
+                        android:maxHeight="250dp"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <!--add insert image button from the menubar -->
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/btn_speak"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Speak"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
